Group 2 Richard Remley

--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <title>Anime Search</title>
   </head>
   <body>
-    <h1>Anime Search</h1>
+    <h1>A Song of Ice and Fire: Character Search</h1>
     <div class="search-section">
-      <input type="text" id="search-input" placeholder="Anime Title" />
+      <input type="text" id="search-input" placeholder="Enter character name" />
       <button id="search">Search</button>
     </div>
     <section class="movie-list">
     </section>
+
+    <h1>Allegiance Search</h1>
+    <div class="search-section">
+      <input type="text" id="allegiance-input" placeholder="Enter House name" />
+      <button id="search2">Search</button>
+    </div>
+    <section class="allg-list"></section>
   </body>
 </html>
