Group 2 Richard Remley

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>A Song of Ice and Fire: Character Search</h1>
+    <h4>Welcome. Listed here is an API search of the people and houses of A Song of Ice and Fire. As this API is somewhat rudimentary, you can only search by repository number, rather then name. Certain prominent characters and houses have been listed at the bottom of the page alongside their number, so you can get started. Try them out.</h4>
     <div class="search-section">
       <input type="text" id="search-input" placeholder="Enter character name" />
       <button id="search">Search</button>
@@ -21,6 +22,8 @@
       <input type="text" id="allegiance-input" placeholder="Enter House name" />
       <button id="search2">Search</button>
     </div>
-    <section class="allg-list"></section>
+    <section2 class="allg-list"></section>
+      <h4>House Lannister: 229 <br> House
+      </h4>
   </body>
 </html>
