--- a/index.html
+++ b/index.html
@@ -5,25 +5,27 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js" charset="utf-8"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Charm&family=Tangerine&display=swap" rel="stylesheet">
     <title>Anime Search</title>
   </head>
   <body>
-    <h1>A Song of Ice and Fire: Character Search</h1>
-    <h4>Welcome. Listed here is an API search of the people and houses of A Song of Ice and Fire. As this API is somewhat rudimentary, you can only search by repository number, rather then name. Certain prominent characters and houses have been listed at the bottom of the page alongside their number, so you can get started. Try them out.</h4>
+    <h1>A Song of Ice and Fire API</h1>
+    <h4>Welcome. Listed here is an API search of the people and houses of A Song of Ice and Fire. As this API is somewhat rudimentary, you can only search by repository number, rather then name. Certain prominent characters are listed under 1303, 583, 339, and 1052.  Try them out.</h4>
+    <h2>Character Search</h2>
     <div class="search-section">
-      <input type="text" id="search-input" placeholder="Enter character name" />
+      <input type="text" id="search-input" placeholder="Enter character number" />
       <button id="search">Search</button>
     </div>
     <section class="movie-list">
     </section>
 
-    <h1>Allegiance Search</h1>
+    <h2>House Search</h2>
     <div class="search-section">
-      <input type="text" id="allegiance-input" placeholder="Enter House name" />
+      <input type="text" id="allegiance-input" placeholder="Enter House number" />
       <button id="search2">Search</button>
     </div>
     <section2 class="allg-list"></section>
-      <h4><br> 
-      </h4>
   </body>
 </html>
