Group 2 Richard Remley

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Anime Search</title>
   </head>
   <body>
-    <h1>A Song of Ice and Fire API</h1>
+    <h1>A Song of <span id="ice">Ice</span> and <span id="fire">Fire</span> API</h1>
     <h4>Welcome. Listed here is an API search of the people and houses of A Song of Ice and Fire. As this API is somewhat rudimentary, you can only search by repository number, rather then name. Certain prominent characters are listed under 1303, 583, 339, and 1052.  Try them out.</h4>
     <h2>Character Search</h2>
     <div class="search-section">
